--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "avadim/ace-calculator",
     "description": "Flexible universal calculator with custom operators, functions and variables",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "keywords": ["calculator","expression","math","parser","lexer"],
     "homepage": "https://github.com/aVadim483/ace-calculator",
     "license": "MIT",
