--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
+  - '5.6'
 
 before_script:
-  - wget http://getcomposer.org/composer.phar
-  - php composer.phar install
+  - travis_retry composer install
+
+script:
+  - ./vendor/bin/phpunit --no-configuration avadim\AceCalculator\TestAceCalculator test/TestAceCalculator.php
