--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
         }
     ],
     "require": {
-        "php": ">=5.6"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~5.0"
+        "php": ">=7.4"
     },
     "autoload": {
         "psr-4": {"avadim\\AceCalculator\\": "src/"}
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "bin-dir": "bin"
